2007-11-11  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/painterdevice.h, libavogadro/src/povpainter.h,
	libavogadro/src/glwidget.cpp: Exposed the loaded Molecule to the
	PainterDevice.

	* libavogadro/src/painter.h, libavogadro/src/povpainter.h,
	libavogadro/src/glpainter.h: Added the drawTriangle function.

2007-11-10  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/src/mainwindow.cpp (copy, exportGraphics): Embed MDL
	molfile and SMILES data in exported graphics. Should allow PNG
	files to be read back in via Open Babel 2.2.

2007-11-06  Marcus D. Hanwell <marcus@cryos.org>
	* avogadro/libavogadro/src/engines/ribbonengine.*: Added ability to
	set the ribbon radius, also tried to add transparency - not working
	for me here.

	* libavogadro/src/glpainter.cpp: Added some extra calculations so that
	the tube shouldn't be flattened and also has a defined radius. More
	tuning has really improved the render speed - thanks to Thomas Margraf
	for providing an example which inspired what I did here.

2007-11-05  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/glpainter.cpp: Now filled with NURBS goodness.
	Still needs quite a bit of tuning and testing but visually improved.
  
	* libavogadro/src/engines/ribbonengine.cpp: Modifications to work
	with the new GLPainter.

2007-11-02  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/glwidget.cpp: Updated the setMolecule function to 
	call setPrimitives for each engine at the end of molecule loading,
	should make our molecule loading more efficient.
  
	* libavogadro/src/engines/ribbonengine.*: Reimplemented the
	setPrimitives function due to changes in molecule loading.

2007-11-01  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/engines/labelengine.cpp,
	libavogadro/src/engines/labelsettingswidget.ui: Updated the label
	engineto label atoms by residue name and number and bonds by their
	order. Feature request 1820686 and 1824338. Also added partial charge